--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://45.58.56.194:3306/spring_boot?useSSL=false&serverTimezone=Europe/Madrid
-spring.datasource.username=antrax
-spring.datasource.password=antrax123
+spring.datasource.username=test
+spring.datasource.password=testpw
 
 spring.jpa.hibernate.ddl-auto=create
 logging.level.org.hibernate.SQL=debug
